# operating_systems

./: .gitignore  CMakeLists.txt  README.md  copyFilePosix.c  rough.c
processes/: a  b  c_shared_consumer.c  collatz_conjecture.c  collatz_conjecture_shm.c  exec_test.c  filecopy_pipe.c  fork_learn.c  fork_party.c  pipe_ipc.c  shared_memory_producer.c  test_output.c  time_keeper.c  time_keeper_pipe.c  zombie.c
threads_concurrency/: cummulative_sum.c  openmp_poc.c
